isBlank update change